refactor use of findByRoleName in old ui provider roles service/action